--- a/config.env
+++ b/config.env
@@ -15,7 +15,7 @@ KERNEL_ZIP_NAME=mido_lxc-docker-kernel_202309140009
 ENABLE_KVM=false
 
 # 是否开启lxc-docker，true即可
-ENABLE_LXC_DOCKER=true
+ENABLE_LXC_DOCKER=false
 
 # 选择要打包的内核镜像文件
 # 低端机填Image.gz-dtb
