--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # 内核源码地址
-KERNEL_SOURCE=https://github.com/KONA-DEVS/kernel_xiaomi_sm8250/tree/eleven
+KERNEL_SOURCE=https://github.com/KONA-DEVS/kernel_xiaomi_sm8250
 # 内核源码分支
 KERNEL_SOURCE_BRANCH=eleven
 
@@ -14,7 +14,7 @@ KERNEL_ZIP_NAME=mido_lxc-docker-kernel_202309140009
 ENABLE_KVM=false
 
 # 是否开启lxc-docker，true即可
-ENABLE_LXC_DOCKER=false
+ENABLE_LXC_DOCKER=true
 
 # 选择要打包的内核镜像文件
 # 低端机填Image.gz-dtb
