--- a/config.env
+++ b/config.env
@@ -30,7 +30,7 @@ LLVM_CONFIG=y
 SWITCH_PYTHON=true
 
 # 是否需要dtbo，一般不需要，false即可
-NEED_DTBO=false
+NEED_DTBO=true
 
 # ksu部分，如果不需要ksu，以下内容都不用改
 # 如果需要ksu，值改成true，下面的参数main不用改
